RESOLVED FIXED102232
[EFL][WK2] Unset the tooltip when the web process has crashed
https://bugs.webkit.org/show_bug.cgi?id=102232
Summary [EFL][WK2] Unset the tooltip when the web process has crashed
Sudarsana Nagineni (babu)
Reported 2012-11-14 07:42:15 PST
We should unset the tooltip if it is visible, when the web process has crashed. Otherwise, it stays on the view all the time.
Attachments
Patch (1.26 KB, patch)
2012-11-15 05:46 PST, Sudarsana Nagineni (babu)
gyuyoung.kim: review+
Patch (1.28 KB, patch)
2012-11-16 01:16 PST, Sudarsana Nagineni (babu)
no flags
Sudarsana Nagineni (babu)
Comment 1 2012-11-15 05:46:39 PST
Gyuyoung Kim
Comment 2 2012-11-16 01:02:57 PST
Comment on attachment 174416 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=174416&action=review > Source/WebKit2/ChangeLog:3 > + [EFL] [WK2] Unset the tooltip when the web process has crashed Remove a space between [EFL] and [WK2]
Sudarsana Nagineni (babu)
Comment 3 2012-11-16 01:16:03 PST
Created attachment 174629 [details] Patch Fix changelog.
WebKit Review Bot
Comment 4 2012-11-16 04:54:17 PST
Comment on attachment 174629 [details] Patch Clearing flags on attachment: 174629 Committed r134933: <http://trac.webkit.org/changeset/134933>
WebKit Review Bot
Comment 5 2012-11-16 04:54:21 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.