[EFL][WK2] Unset the tooltip when the web process has crashed https://bugs.webkit.org/show_bug.cgi?id=102232

Patch by Sudarsana Nagineni <sudarsana.nagineni@intel.com> on 2012-11-16
Reviewed by Gyuyoung Kim.

Emit 'tooltip,text,unset' signal to unset the tooltip
when the web process has crashed.

* UIProcess/efl/PageClientBase.cpp:
(WebKit::PageClientBase::processDidCrash):

Canonical link: https://commits.webkit.org/120625@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134933 268f45cc-cd09-0410-ab3c-d52691b4dbfc